# transportik-lite

./: .dockerignore  .env.template  .gitignore  README.md  config-test.yml  config.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
backend/: .env.template  .gitignore  docker-compose.yml
backend/configs/: config-test.yml
backend/system_service/: config.yml  pyproject.toml  setup.cfg
backend/system_service/docker/: Dockerfile  entrypoint.sh  gunicorn.sh
backend/system_service/server/modules/security/: apps.py  views.py
backend/system_service/server/modules/transports/: apps.py  urls.py  views.py
backend/system_service/server/modules/transports/migrations/: 0001_initial.py
backend/system_service/server/modules/transports/repositories/: base.py
backend/system_service/server/modules/trips/: serializers.py  views.py
backend/system_service/server/modules/trips/migrations/: 0001_initial.py
backend/system_service/server/modules/users/: filters.py
backend/system_service/server/modules/users/migrations/: 0001_initial.py
backend/system_service/server/settings/: __init__.py
backend/system_service/server/settings/components/: __init__.py  celery.py  common.py
backend/system_service/server/settings/environments/: development.py
backend/system_service/tests/test_server/: conftest.py
configs/: config.yml
deploy/: .env.template
deploy/cassandra/: cassandra.yml
deploy/monitoring/: prom.yml
deploy/rabbitmq/: cluster-connect.sh  entrypoint.sh  rabbitmq.yml  root-init.sh
docker/: .env  docker-compose.yml
docker/common/: app-pg.yml  app.yml  cassandra.yml  rabbitmq.yml  zabbix.yml
docker/django/: Dockerfile  entrypoint.sh
docker/monitoring/: prom.yml  prometheus.yml
docker/rabbitmq/: cluster-connect.sh  entrypoint.sh  rabbitmq.yml  root-init.sh
server/: urls.py
server/modules/: urls.py
tests/test_server/: conftest.py
transportik/: urls.py  wsgi.py
transportik/modules/: urls.py
transportik/settings/: __init__.py
(+75 files in other folders)
